# BentoML-practice

./: .gitignore  pyproject.toml
02-xgboost-deploy/: bentofile.yaml  service.py  test.py  train.py
basic-tutorial/: service.py
xgboost-deploy/: inference.py  service.py  train.py
